# algorithm_exercises

./: .gitignore  Cargo.toml  README.md
src/: expression.rs  lib.rs  list.rs  stack.rs  utils.rs
src/core/: linear.rs
src/list/: sq_list.rs
