[package]
name = "algorithm_exercises"
version = "0.1.3"
edition = "2024"

description = "一组算法练习与小工具集合，包含顺序表等数据结构的实现与示例。"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solsticexin/algorithm_exercises"
homepage = "https://github.com/solsticexin/algorithm_exercises"
readme = "README.md"
keywords = ["algorithms", "data-structures", "learning", "examples"]
categories = ["algorithms", "data-structures"]
authors = ["solsticexin <noreply@users.noreply.github.com>"]

[dependencies]
